Follow XDG Base Directory Specification
Follow the XDG Base Directory Specification(*) by testing for XDG
environment variables on the remote host before determining target
directories under "ansible_user_dir".

Adapt scripts to honor the XDG environment variables as well.

(*) https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html

--- a/templates/profile.j2
+++ b/templates/profile.j2
@@ -1,7 +1,7 @@
-if [ -d "{{ ansible_user_dir }}/{{ bash_profile_d }}" ]; then
-    for file in $(ls "{{ ansible_user_dir }}/{{ bash_profile_d }}"); do
-        if [ -r "{{ ansible_user_dir }}/{{ bash_profile_d }}/$file" ]; then
-            . "{{ ansible_user_dir }}/{{ bash_profile_d }}/$file"
+if [ -d "{{ bash_profile_d }}" ]; then
+    for file in $(ls "{{ bash_profile_d }}"); do
+        if [ -r "{{ bash_profile_d }}/$file" ]; then
+            . "{{ bash_profile_d }}/$file"
         fi
     done
 fi
