--- a/templates/bash_completion.j2
+++ b/templates/bash_completion.j2
@@ -1,7 +1,7 @@
-if [ -d "{{ ansible_user_dir }}/{{ bash_completion_d }}" ]; then
-    for file in $(ls "{{ ansible_user_dir }}/{{ bash_completion_d }}"); do
-        if [ -r "{{ ansible_user_dir }}/{{ bash_completion_d }}/$file" ]; then
-            . "{{ ansible_user_dir }}/{{ bash_completion_d }}/$file"
+if [ -d "{{ bash_completion_d }}" ]; then
+    for file in $(ls "{{ bash_completion_d }}"); do
+        if [ -r "{{ bash_completion_d }}/$file" ]; then
+            . "{{ bash_completion_d }}/$file"
         fi
     done
 fi
